add task specific dates #10

--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -1745,7 +1745,10 @@ function updateSelectedDatesDisplay() {
         selectedDatesContainer.appendChild(placeholder);
     } else {
         specificDatesInput.value = selectedDates.map(date => {
-            return `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')}`;
+            const year = date.getFullYear();
+            const month = String(date.getMonth() + 1).padStart(2, '0');
+            const day = String(date.getDate()).padStart(2, '0');
+            return `${year}-${month}-${day}`;
         }).join(",");
         console.log("specificDatesInput.value:", specificDatesInput.value); // Debug
         selectedDates.forEach(date => {
@@ -1767,8 +1770,6 @@ function updateSelectedDatesDisplay() {
         });
     }
 }
-
-
 
 
 
