--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -562,16 +562,6 @@ body {
     const completedCount = completedUsers.length + pendingUsers.length;
     const completedSet = new Set([...completedUsers, ...pendingUsers]);
 
-    function parseLocalDate(dateStr) {
-    if (!dateStr) return new Date(3000, 0, 1);
-    const parts = dateStr.split("-");
-    if (parts.length !== 3) return new Date(3000, 0, 1);
-    const [year, month, day] = parts.map(Number);
-    if (isNaN(year) || isNaN(month) || isNaN(day)) return new Date(3000, 0, 1);
-    const date = new Date(year, month - 1, day);
-    if (isNaN(date.getTime())) return new Date(3000, 0, 1);
-    return date;
-}
 
     const selected = parseLocalDate(selectedDate);
     const today = new Date();
@@ -662,12 +652,19 @@ body {
     taskList.innerHTML = "";
 
     function parseLocalDate(dateStr) {
-    if (!dateStr) return new Date(3000, 0, 1);
-    const [year, month, day] = dateStr.split("-").map(Number);
-    if (isNaN(year) || isNaN(month) || isNaN(day)) return new Date(3000, 0, 1);
-    const date = new Date();
-    date.setFullYear(year, month - 1, day);
-    date.setHours(0, 0, 0, 0); // Normalize to midnight local time
+    if (!dateStr || typeof dateStr !== 'string') return new Date(3000, 0, 1);
+    const parts = dateStr.trim().split("-");
+    if (parts.length !== 3) return new Date(3000, 0, 1);
+    const [year, month, day] = parts.map(Number);
+    if (isNaN(year) || isNaN(month) || isNaN(day) || year < 1970 || month < 1 || month > 12 || day < 1 || day > 31) {
+        console.warn(`Invalid date string: ${dateStr}`);
+        return new Date(3000, 0, 1);
+    }
+    const date = new Date(year, month - 1, day, 0, 0, 0, 0); // Explicitly set to midnight local time
+    if (isNaN(date.getTime())) {
+        console.warn(`Failed to parse date: ${dateStr}`);
+        return new Date(3000, 0, 1);
+    }
     return date;
 }
 
