--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -1731,11 +1731,8 @@ function getDatesInRange(start, end) {
     return dates;
 }
 
-
-
 function updateSelectedDatesDisplay() {
     selectedDatesContainer.innerHTML = "";
-    console.log("Selected Dates (raw):", selectedDates); // Debug
     if (selectedDates.length === 0) {
         specificDatesInput.value = "";
         const placeholder = document.createElement("span");
@@ -1744,13 +1741,9 @@ function updateSelectedDatesDisplay() {
         placeholder.style.fontSize = "14px";
         selectedDatesContainer.appendChild(placeholder);
     } else {
-        specificDatesInput.value = selectedDates.map(date => {
-            const year = date.getFullYear();
-            const month = String(date.getMonth() + 1).padStart(2, '0');
-            const day = String(date.getDate()).padStart(2, '0');
-            return `${year}-${month}-${day}`;
-        }).join(",");
-        console.log("specificDatesInput.value:", specificDatesInput.value); // Debug
+        specificDatesInput.value = selectedDates.map(date =>
+            date.toISOString().split("T")[0]
+        ).join(",");
         selectedDates.forEach(date => {
             const chip = document.createElement("div");
             chip.className = "date-chip";
@@ -1770,10 +1763,6 @@ function updateSelectedDatesDisplay() {
         });
     }
 }
-
-
-
-
 
 specificDatesButton.addEventListener("click", () => {
     showModal(specificDatesModal);
